# Swarm-Robotics-for-Task-Coordination

./: .gitignore  CMakeLists.txt  README.md  run_swarm.bat  run_swarm.sh
config/: config.json
include/: swarm_robotics.h
src/core/: swarm_robotics.cpp
src/include/: swarm_robotics.h
src/simulation/: simulator.cpp
web_interface/: app.py
web_interface/static/: style.css
web_interface/templates/: index.html
